--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,17 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
 	implementation 'org.apache.commons:commons-text:1.10.0'
 
+	// xss
 	// https://mvnrepository.com/artifact/commons-io/commons-io
 	implementation 'commons-io:commons-io:2.11.0'
+
+	// xss
+	// https://mvnrepository.com/artifact/org.owasp.encoder/encoder
+	implementation 'org.owasp.encoder:encoder:1.2.3'
+
+	// xss
+	// https://mvnrepository.com/artifact/org.jsoup/jsoup
+	implementation 'org.jsoup:jsoup:1.15.3'
 
 }
 
