--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,6 @@ spring:
     restart:
       enabled: true
   jpa:
-    show-sql: true
     generate-ddl: true
     database: default
     hibernate:
@@ -19,6 +18,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
   data:
     web:
       pageable:
@@ -32,7 +32,14 @@ spring:
     mode: HTML
     cache: false
 
-  # logging:
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
+# logging:
   #   level:
   #     org:
   #       springframework:
